--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 fastapi==0.115.0
 uvicorn==0.30.6
-gradio==5.0.0
+huggingface-hub==0.23.0
+gradio==4.44.1
 pandas==2.2.3
 gspread==6.1.4
 google-auth==2.35.0
 audioop-lts
+
 
